<resources>
    <string name="app_name">Cook Mate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="signout">SignOut</string>
    <string name="about">About</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="recipe_of_day">Recipe Of Day</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="name">UseName</string>
    <string name="enter_name">enter name</string>
    <string name="password">Password</string>
    <string name="enter_password">enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="search_result">Search Result</string>
    <string name="create_an_account">Create an account</string>
    <string name="set_up_your_account">Let\'s help you set up your account, it won\'t take long.</string>
    <string name="enter_user_name">enter user name</string>
    <string name="or_sign_in_with">Or Sign in With</string>
    <string name="already_a_member">"Already a member? "</string>
    <string name="retype_password">retype password</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="about_our_recipe_app">About Our Recipe App</string>
    <string name="Description"><![CDATA[Welcome to our Recipe App, your ultimate cooking companion! Our app is designed to make your culinary journey enjoyable and effortless. Whether you\'re a seasoned chef or a kitchen novice, our app offers everything you need to discover, create, and save delicious recipes.\n\n- Login & Register: Quickly create an account or log in to access personalized features.\n- Home: Explore a curated selection of popular and trending recipes.\n- Search: Find recipes that match your preferences using our powerful search feature.\n- Recipe Details: Dive into detailed instructions, ingredients, and tips for each recipe.\n- Favorites: Save your favorite recipes for easy access anytime.\n\nEnjoy cooking with our app, where inspiration meets simplicity!]]></string>
    <string name="show_more">Show More</string>
    <string name="team_member_image">Team Member Image</string>
    <string name="ahmed_fikry">Ahmed Fikry</string>
    <string name="linkedin">LinkedIn</string>
    <string name="michael_mounir">Michael Mounir</string>
    <string name="show_less">Show Less</string>
    <string name="mostafa_mohamed">Mostafa Mohamed</string>
</resources>