<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hello"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_back"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space16"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/space16"
        android:layout_marginTop="@dimen/space12"
        android:background="@drawable/custom_input_field"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingEnd="16dp"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/space16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/space16"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input_field"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space16"
        android:layout_marginTop="56dp"
        android:background="@drawable/ripple_green_button"
        android:fontFamily="@font/poppins_bold"
        android:padding="@dimen/space16"
        android:text="@string/sign_in"
        android:textColor="@color/background"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space24"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton">

        <TextView
            android:id="@+id/dontHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/don_t_have_an_account_sign_up" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_up"
            android:textColor="@color/secondary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>