<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.about.AboutFragment"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.about.AboutFragment">
        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/background"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/back_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="@dimen/space16"
                        app:srcCompat="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/space16"
                        android:layout_toEndOf="@id/back_icon"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/about"
                        android:textColor="@color/light_text"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/light_gray" />
                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/titleBar"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/aboutDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:textSize="16sp"
                    android:textColor="@color/light_text"
                    android:maxLines="4"
                    android:ellipsize="end"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_regular"/>

                <Button
                    android:id="@+id/showMoreButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_more"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/secondary"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_regular"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/teamMemberImageView1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/team_member_image" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teamMemberNameTextView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ahmed_fikry"
                            android:textSize="18sp"
                            android:textColor="@color/text"
                            android:fontFamily="@font/poppins_bold"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/teamMemberLinkedInButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:background="?attr/selectableItemBackground"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/teamMemberImageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/team_member_image" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teamMemberNameTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mostafa_mohamed"
                            android:textSize="18sp"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="@color/text" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/teamMemberLinkedInButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:background="?attr/selectableItemBackground"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:id="@+id/teamMemberImageView3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/team_member_image" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teamMemberNameTextView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/michael_mounir"
                            android:textSize="18sp"
                            android:textColor="@color/text"
                            android:fontFamily="@font/poppins_bold"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/teamMemberLinkedInButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:background="?attr/selectableItemBackground"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_bold"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</FrameLayout>