<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.recipe_details.RecipeDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/background"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/back_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/space16"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space16"
                    android:layout_toEndOf="@id/back_icon"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/recipe_details"
                    android:textColor="@color/light_text"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light_gray" />
            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/space4">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/favorite_recipe_shape"
                android:scaleType="fitXY" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/play_video_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/video_play_icon_shape"
                app:srcCompat="@drawable/ic_video_play" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginTop="@dimen/space16"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/title_recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/light_text"
                android:layout_weight="6"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favorite_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/space16"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_unfavorite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginTop="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/instructions"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space8"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginTop="@dimen/space16"
            android:gravity="end"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space16"
            android:layout_marginVertical="@dimen/space16"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:layout_marginTop="@dimen/space16"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/ingredients"
                android:textColor="@color/text"
                android:textSize="14sp" />

            <com.nex3z.flowlayout.FlowLayout
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space8"
                app:flChildSpacing="auto"
                app:flChildSpacingForLastRow="align"
                app:flMinChildSpacing="@dimen/space8"
                app:flRowSpacing="@dimen/space8" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>